[BEDWARS] Some join changes